# Options-Backfill

./: AGENTS.md  LICENSE  README.md  eodhd_options_helper.py  massive_options_helper.py  pyproject.toml
docs/: eodhd_options_backfill_downloader_design.md  massive_options_backfill_downloader_design.md
flatfiles/: boto3_minute_aggregates_test_design.md
openspec/: project.md
openspec/changes/archive/2026-06-06-add-eodhd-backfill-m0-m1/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-06-add-eodhd-backfill-m0-m1/specs/options-backfill/: spec.md
openspec/changes/archive/2026-06-06-add-massive-backfill-m0-m1/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-06-add-massive-backfill-m0-m1/specs/options-backfill/: spec.md
openspec/specs/options-backfill/: spec.md
options_backfill/: __init__.py  config.py  models.py  storage.py
options_backfill/sql/: queries.sql  schema.sql
tests/: conftest.py  test_eodhd_options_helper.py  test_massive_options_helper.py  test_massive_options_helper_live.py  test_options_backfill_storage.py  test_options_backfill_storage_unit.py
