[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-backfill"
version = "0.1.0"
description = "Tools for downloading and backfilling EODHD options data into PostgreSQL."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "asyncpg>=0.30,<1.0",
    "duckdb>=1.0,<2.0",
    "pandas>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.setuptools]
py-modules = ["eodhd_options_helper"]

[tool.setuptools.packages.find]
include = ["options_backfill*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
